# dmypy-ls

./: .gitignore  LICENSE  README.md  README.rst  poe.toml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yaml  release.yml
dmypy_ls/: __init__.py
dmypy_ls/tests/: test_dmypy_ls.py
