[metadata]
name = dmypy-ls
version = 1.2
home_page = https://github.com/sileht/dmypy-ls
summary = super fast mypy language server
description_file = README.md
author = Mehdi Abaakouk
author_email = sileht@sileht.net
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Software Development
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    dmypy_ls

install_requires =
    pygls
    mypy

[options.extras_require]
test =
pep8 =
    bandit
    flake8
    flake8-black
    flake8-blind-except
    flake8-bugbear
    flake8-builtins
    flake8-comprehensions
    flake8-docstrings
    flake8-logging-format
    flake8-rst-docstrings
    flake8-use-fstring
    isort
    mypy>=0.901,<0.920

[options.entry_points]
console_scripts =
    dmypy-ls = dmypy_ls:main

[build_wheel]
universal = 1

[mypy]
ignore_missing_imports = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_unused_configs = true
disallow_any_generics = true
warn_return_any = true
files = dmypy_ls
disallow_subclassing_any = true
warn_redundant_casts = true
strict_equality = true
no_implicit_optional = true
disallow_untyped_decorators = true
show_error_codes = true
disallow_untyped_calls = true
